--- a/configuration.properties
+++ b/configuration.properties
@@ -2,8 +2,10 @@
 #for example, we can call url from this file DYNAMICALLY
 techproed_url=https://www.techproeducation.com
 google_url=https://www.google.com
-amazon_url=https://www.amazon.com
 address_url=http://a.testaddressbook.com/sign_in
+amazon_url=https://www.amazon.com
+automation_exercise_url=https://www.automationexercise.com/
+
 address_username=testtechproed@gmail.com
 address_pass=Test1234!
 browser=chrome
