--- a/configuration.properties
+++ b/configuration.properties
@@ -9,6 +9,9 @@ automation_exercise_url=https://www.automationexercise.com/
 address_username=testtechproed@gmail.com
 address_pass=Test1234!
 browser=chrome
+app_url=https://www.bluerentalcars.com/
+admin_username=admin@bluerentalcars.com
+admin_password=12345
 
 username=user123
 password=pass123
