--- a/configuration.properties
+++ b/configuration.properties
@@ -13,6 +13,11 @@ app_url=https://www.bluerentalcars.com/
 admin_username=admin@bluerentalcars.com
 admin_password=12345
 
+customer_username=customer@bluerentalcars.com
+customer_password=12345
+
+
+
 username=user123
 password=pass123
 #Why we use this file?
